WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112833
REGRESSION(
r145592
): AutodrainedPool.h. RunLoopTimer.h, SchedulePair.h are being copied into the wrong location
https://bugs.webkit.org/show_bug.cgi?id=112833
Summary
REGRESSION(r145592): AutodrainedPool.h. RunLoopTimer.h, SchedulePair.h are be...
Jessie Berlin
Reported
2013-03-20 13:35:25 PDT
They are ending up in MyBuildDir/Debug/usr/local/include instead of MyBuildDir/Debug/usr/local/include/wtf They need to be copied with the rest of the headers in the Project section of the Copy Public Headers step. The were incorrectly marked as private in
http://trac.webkit.org/changeset/145592
<
rdar://problem/13463134
>
Attachments
Patch
(9.31 KB, patch)
2013-03-20 13:44 PDT
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
Patch
(3.08 KB, patch)
2013-08-01 14:35 PDT
,
Simon Fraser (smfr)
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2013-03-20 13:44:56 PDT
Created
attachment 194109
[details]
Patch
Jessie Berlin
Comment 2
2013-03-20 15:05:30 PDT
Comment on
attachment 194109
[details]
Patch Committed in
http://trac.webkit.org/changeset/146394
Simon Fraser (smfr)
Comment 3
2013-08-01 14:26:32 PDT
This seems to have broken again.
Simon Fraser (smfr)
Comment 4
2013-08-01 14:35:10 PDT
Created
attachment 207952
[details]
Patch
Sam Weinig
Comment 5
2013-08-01 14:37:36 PDT
Comment on
attachment 207952
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=207952&action=review
> Source/WTF/ChangeLog:9 > + privaet headers, so they get copied into <build dir>/usr/local/include/wtf
Typo - private.
Simon Fraser (smfr)
Comment 6
2013-08-01 14:40:28 PDT
http://trac.webkit.org/changeset/153609
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug