third_party/WebKit/Source/WebCore/loader/DocumentLoader.h
@@ -47,7 +47,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <wtf/Vector.h>
 
 #if HAVE(RUNLOOP_TIMER)
-#include "RunLoopTimer.h"
+#include <wtf/RunLoopTimer.h>
 #endif
 
 namespace WTF {
